--- a/app/src/main/res/drawable/add_corner_bt_registr_2.xml
+++ b/app/src/main/res/drawable/add_corner_bt_registr_2.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--TODO можна ctrl+alt+l нажати-->
+<!--TODO dp, та просто значення треба винести у файл значень - в dimens.xml-->
+<!--TODO Для чого android:gradientRadius?-->
+<!--TODO Нема нажатого стану кнопки-->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:state_pressed="false">
 <shape android:shape="rectangle">
