--- a/app/src/main/res/drawable/bt_google.xml
+++ b/app/src/main/res/drawable/bt_google.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--TODO писав зауваження про кнопку у файлі макету.-->
+<!--TODO ctrl+alt+l нажати-->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="328dp"
         android:height="40dp"
