--- a/app/src/main/res/drawable/buttom_fbook.xml
+++ b/app/src/main/res/drawable/buttom_fbook.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--TODO можна ctrl+alt+l нажати-->
+<!--TODO назва файлу містить помилку. Не buttom, а button-->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="60dp"
     android:height="60dp"
