--- a/app/src/main/res/layout-land/activity_auch.xml
+++ b/app/src/main/res/layout-land/activity_auch.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--TODO Дизайн не дуже продуманий, якщо змінити розмір екрану-->
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -17,8 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-
+<!--    TODO замість LinearLayout можна використати ланцюг. Описано у портретній орієнтації-->
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
@@ -79,6 +79,7 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
 
+<!--    TODO Замість LinearLayout можна використовувати Flow. https://developer.android.com/reference/androidx/constraintlayout/helper/widget/Flow-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
