--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--TODO розміри замінити на посилання на розміри з dimens.xml-->
 <resources>
     <style name="TextView">
         <item name="android:layout_width">wrap_content</item>
