--- a/app/src/main/res/layout-land/activity_auch.xml
+++ b/app/src/main/res/layout-land/activity_auch.xml
@@ -79,7 +79,7 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
 
-<!--    TODO Замість LinearLayout можна використовувати Flow. https://developer.android.com/reference/androidx/constraintlayout/helper/widget/Flow-->
+<!--    TODO Замість LinearLayout можна використовувати Flow. https://developer.android.com/reference/androidx/constraintlayout/helper/widget/Flow -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -98,7 +98,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textV_get_acount"
             tools:ignore="MissingConstraints">
 
-
+<!--        TODO прибрати зайві атрибути, типу gravity-->
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/til_EmailAddress"
                 android:layout_width="match_parent"
